--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     ],
     "require": {
         "php": "^8.1",
-        "firebase/php-jwt": "^6.8"
+        "firebase/php-jwt": "^6.8",
+        "thiagoprz/eloquent-composite-key": "^1.0"
     },
     "require-dev": {
         "illuminate/database": "^10.0",
