--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,9 @@
         "illuminate/database": "^10.0",
         "illuminate/support": "^10.0",
         "laravel/pint": "^1.13",
+        "nunomaduro/collision": "^7.9",
         "orchestra/testbench": "^8.0",
-        "phpunit/phpunit": "^9.0"
+        "phpunit/phpunit": "^10.0"
     },
     "autoload": {
         "psr-4": {
@@ -42,9 +43,10 @@
         }
     },
     "scripts": {
-        "test": "vendor/bin/phpunit",
-        "test-coverage": "vendor/bin/phpunit --coverage-html coverage"
-
+        "test": "vendor/bin/testbench package:test --configuration=tests/phpunit.xml",
+        "lint": [
+            "@php vendor/bin/pint"
+        ]
     },
     "config": {
         "sort-packages": true
