--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,7 @@
         "thiagoprz/eloquent-composite-key": "^1.0"
     },
     "require-dev": {
-        "illuminate/database": "^10.0",
-        "illuminate/support": "^10.0",
+        "guzzlehttp/guzzle": "^7.8",
         "laravel/pint": "^1.13",
         "nunomaduro/collision": "^7.9",
         "orchestra/testbench": "^8.0",
