update gitworkflow with mysql 8

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,10 +13,10 @@ jobs:
         # MySQL service setup
         services:
             mysql:
-                image: mysql:5.7
+                image: mysql:8.0
                 env:
-                    MYSQL_ROOT_PASSWORD: root
-                    MYSQL_DATABASE: test
+                    MYSQL_ROOT_PASSWORD: password
+                    MYSQL_DATABASE: testing
                     MYSQL_USER: user
                     MYSQL_PASSWORD: password
                 ports:
