--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,12 @@ jobs:
                     MYSQL_PASSWORD: password
                 ports:
                     - 3306:3306
-                options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
+                options: >-
+                    --health-cmd="mysqladmin ping"
+                    --health-interval=10s
+                    --health-timeout=5s
+                    --health-retries=3
+                    --mount type=bind,source=${{ github.workspace }}/.github/workflows/my.cnf,destination=/etc/mysql/conf.d/my.cnf
 
         # Environment variables for tests
         env:
