--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,8 @@ jobs:
                     --health-interval=10s
                     --health-timeout=5s
                     --health-retries=3
-                    --mount type=bind,source=${{ github.workspace }}/my.cnf,destination=/etc/mysql/conf.d/my.cnf
+                    --default-authentication-plugin=mysql_native_password
+                    -e MYSQL_LOG_BIN_TRUST_FUNCTION_CREATORS=1
 
         # Environment variables for tests
         env:
