--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,7 @@ jobs:
                     MYSQL_DATABASE: testing
                     MYSQL_USER: user
                     MYSQL_PASSWORD: password
+                    MYSQL_LOG_BIN_TRUST_FUNCTION_CREATORS: "1"
                 ports:
                     - 3306:3306
                 options: >-
@@ -26,8 +27,6 @@ jobs:
                     --health-interval=10s
                     --health-timeout=5s
                     --health-retries=3
-                    --default-authentication-plugin=mysql_native_password
-                    -e MYSQL_LOG_BIN_TRUST_FUNCTION_CREATORS=1
 
         # Environment variables for tests
         env:
