--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,7 @@ jobs:
                     --health-interval=10s
                     --health-timeout=5s
                     --health-retries=3
+                    -v ${{ github.workspace }}/my.cnf:/etc/mysql/my.cnf
 
         # Environment variables for tests
         env:
