--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
                     --health-interval=10s
                     --health-timeout=5s
                     --health-retries=3
-                    --command="--log_bin_trust_function_creators=1"
+                    -v ${{ github.workspace }}/my.cnf:/etc/mysql/conf.d/my_override.cnf
 
         # Environment variables for tests
         env:
