--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,6 +51,9 @@ jobs:
         name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.stability }} - ${{ matrix.os }}
 
         steps:
+            - name: Update permissions for my.cnf
+              run: chmod 644 ${{ github.workspace }}/my.cnf
+
             - name: Checkout code
               uses: actions/checkout@v2
 
@@ -72,14 +75,9 @@ jobs:
                   #composer require "laravel/framework:${{ matrix.laravel }}" "orchestra/testbench:${{ matrix.testbench }}" --no-interaction --no-update
                   #composer update --${{ matrix.stability }} --prefer-dist --no-interaction
 
-            - name: Check dir
-              run: |
-                  echo "SHOW VARIABLES LIKE 'log_bin_trust_function_creators';" | mysql -h127.0.0.1 -P3306 -uuser -ppassword
-
-
             - name: Check MySQL Configuration
               run: |
-                  echo ${{ github.workspace }}
+                  echo "SHOW VARIABLES LIKE 'log_bin_trust_function_creators';" | mysql -h127.0.0.1 -P3306 -uuser -ppassword
 
             - name: Execute tests
               run: vendor/bin/testbench package:test --configuration=tests/phpunit.xml
