--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
                 env:
                     MYSQL_ROOT_PASSWORD: password
                     MYSQL_DATABASE: testing
-                    MYSQL_USER: root
+                    MYSQL_USER: user
                     MYSQL_PASSWORD: password
                 ports:
                     - 3306:3306
@@ -26,7 +26,9 @@ jobs:
                     --health-interval=10s
                     --health-timeout=5s
                     --health-retries=3
-                    -v ${{ github.workspace }}/my.cnf:/etc/mysql/conf.d/my_override.cnf
+                    --entrypoint mysqld
+                    -- log_bin_trust_function_creators=1
+                    
 
         # Environment variables for tests
         env:
@@ -34,7 +36,7 @@ jobs:
             DB_HOST: 127.0.0.1
             DB_PORT: 3306
             DB_DATABASE: testing
-            DB_USERNAME: root
+            DB_USERNAME: user
             DB_PASSWORD: password
 
         strategy:
