--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,9 +26,8 @@ jobs:
                     --health-interval=10s
                     --health-timeout=5s
                     --health-retries=3
-                    --entrypoint mysqld
-                    -- log_bin_trust_function_creators="1"
-                    
+                    -v my.cnf:/etc/mysql/my.cnf
+        
 
         # Environment variables for tests
         env:
