introducing seeder to test + refactoring some of the test

--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
         "psr-4": {
             "WinLocalInc\\Chjs\\": "src",
             "WinLocalInc\\Chjs\\Database\\Factories\\": "Database/Factories/",
-            "WinLocalInc\\Chjs\\Database\\Seeders\\": "Database/Seeders/"
+            "WinLocalInc\\Chjs\\Database\\Seeders\\": "database/seeders/"
         },
         "files": [
             "src/helpers.php"
