--- a/composer.json
+++ b/composer.json
@@ -32,8 +32,8 @@
     "autoload": {
         "psr-4": {
             "WinLocalInc\\Chjs\\": "src",
-            "WinLocalInc\\Chjs\\Database\\Factories\\": "database/factories/",
-            "WinLocalInc\\Chjs\\Database\\Seeders\\": "database/seeders/"
+            "WinLocalInc\\Chjs\\Database\\Factories\\": "Database/Factories/",
+            "WinLocalInc\\Chjs\\Database\\Seeders\\": "Database/Seeders/"
         },
         "files": [
             "src/helpers.php"
